Database & tables created, migration done.

--- a/AccountProvider/AccountProvider.csproj
+++ b/AccountProvider/AccountProvider.csproj
@@ -41,4 +41,7 @@
   <ItemGroup>
     <Folder Include="Functions\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
